--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Dev API - Automate, Fix, Optimize your Code</title>
+    <title>Master Dev API – AI-Powered Bugfix & Code Optimization API</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="description" content="Automate bugfixing, code optimization, documentation & testing tasks with a single REST call. Try free now.">
     <style>
         /* MODERN DARK THEME WITH NEON ACCENTS */
         :root {
@@ -793,6 +794,7 @@
             <h1>Automate, Fix, <span class="floating">Optimize</span> Your Code</h1>
             <p>Powerful AI-driven API that helps developers automate repetitive tasks, fix bugs, optimize performance, and generate documentation with a single request.</p>
             <a href="https://rapidapi.com/mimi800-mimi800-default/api/master-dev-api" class="cta-button">🚀 Get Started Free</a>
+            <p style="margin-top: 30px; font-size: 1.1rem; color: var(--text-secondary);"><i class="fas fa-terminal"></i> Try our API Playground below → Scroll down to test live examples!</p>
         </div>
     </section>
 
@@ -841,7 +843,7 @@
         <div class="container playground-container">
             <div class="section-title">
                 <h2>Interactive API Playground</h2>
-                <p>Test Master Dev API directly in your browser</p>
+                <p>Test Master Dev API directly in your browser • 61ms average latency • 120s timeout</p>
             </div>
             
             <div class="api-card glass">
@@ -857,6 +859,7 @@
                 <!-- Request Section -->
                 <div class="request-section">
                     <h3><i class="fas fa-terminal"></i> Request</h3>
+                    <p style="color: var(--text-secondary); margin-bottom: 20px;"><i class="fas fa-info-circle"></i> Queue ensures serial processing, no race conditions</p>
                     
                     <!-- Endpoint Tabs -->
                     <div class="api-tabs">
@@ -923,7 +926,7 @@
                     <h3>BASIC</h3>
                     <div class="price">$0<span>/month</span></div>
                     <ul class="features-list">
-                        <li><i class="fas fa-check"></i> 50 requests/day</li>
+                        <li><i class="fas fa-check"></i> 3 requests/day (≈100/month)</li>
                         <li><i class="fas fa-check"></i> 1 concurrent request</li>
                         <li><i class="fas fa-check"></i> 7B AI models</li>
                         <li><i class="fas fa-times"></i> Priority support</li>
@@ -931,12 +934,12 @@
                     </ul>
                     <a href="https://rapidapi.com/mimi800-mimi800-default/api/master-dev-api" class="cta-button" style="background: var(--gray);">Get Started</a>
                 </div>
-                <div class="pricing-card popular glass">
-                    <div class="popular-tag">MOST POPULAR</div>
+                <div class="pricing-card popular glass" style="border-color: var(--primary); box-shadow: 0 0 30px rgba(0, 238, 255, 0.4);">
+                    <div class="popular-tag" style="background: var(--gradient);">MOST POPULAR</div>
                     <h3>PRO</h3>
                     <div class="price">$10<span>/month</span></div>
                     <ul class="features-list">
-                        <li><i class="fas fa-check"></i> 500 requests/day</li>
+                        <li><i class="fas fa-check"></i> 166 requests/day (≈5,000/month)</li>
                         <li><i class="fas fa-check"></i> 2 concurrent requests</li>
                         <li><i class="fas fa-check"></i> 7B & 32B AI models</li>
                         <li><i class="fas fa-check"></i> Priority support</li>
@@ -948,7 +951,7 @@
                     <h3>ULTRA</h3>
                     <div class="price">$49<span>/month</span></div>
                     <ul class="features-list">
-                        <li><i class="fas fa-check"></i> 5,000 requests/day</li>
+                        <li><i class="fas fa-check"></i> 1,666 requests/day (≈50,000/month)</li>
                         <li><i class="fas fa-check"></i> 3 concurrent requests</li>
                         <li><i class="fas fa-check"></i> 7B & 32B AI models</li>
                         <li><i class="fas fa-check"></i> Priority support</li>
@@ -960,7 +963,7 @@
                     <h3>MEGA</h3>
                     <div class="price">$199<span>/month</span></div>
                     <ul class="features-list">
-                        <li><i class="fas fa-check"></i> 50,000 requests/day</li>
+                        <li><i class="fas fa-check"></i> 16,666 requests/day (≈500,000/month)</li>
                         <li><i class="fas fa-check"></i> 5 concurrent requests</li>
                         <li><i class="fas fa-check"></i> 7B & 32B AI models</li>
                         <li><i class="fas fa-check"></i> 24/7 priority support</li>
@@ -1033,6 +1036,9 @@
             </div>
             <div class="copyright">
                 &copy; 2025 Master Dev API. All rights reserved. | Built with ❤️ for Developers
+                <p style="margin-top: 20px; font-size: 0.9rem; color: var(--text-secondary);">
+                    <i class="fas fa-users"></i> Trusted by 1,200+ developers worldwide
+                </p>
             </div>
         </div>
     </footer>
